[gd_scene load_steps=4 format=3 uid="uid://cxexuwdjxvoj7"]

[ext_resource type="Script" path="res://Scripts/document/alien_document.gd" id="1_d3kv2"]
[ext_resource type="Texture2D" uid="uid://bpyala5yk0ct7" path="res://Art/Doc/miniVisa_A.png" id="2_sxej0"]
[ext_resource type="PackedScene" uid="uid://ccde40nu5mmu4" path="res://Scenes/document/alien_doc_panel.tscn" id="3_n5otj"]

[node name="alien_document" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.997921, 1)
script = ExtResource("1_d3kv2")

[node name="doc_sprite" type="TextureRect" parent="."]
layout_mode = 2
anchor_left = 0.494
anchor_top = 0.925
anchor_right = 0.494
anchor_bottom = 0.925
offset_left = -133.786
offset_top = -70.0001
offset_right = 112.214
offset_bottom = 53.9999
texture = ExtResource("2_sxej0")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="sprite_button" type="Button" parent="doc_sprite"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_right = 0.993
anchor_bottom = 0.953
offset_left = 0.0519996
offset_right = -0.026001
offset_bottom = -0.0440063
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="alien_doc_panel" parent="doc_sprite" instance=ExtResource("3_n5otj")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.460831
anchor_top = -3.42742
anchor_right = 0.460831
anchor_bottom = -3.42742
metadata/_edit_use_anchors_ = true

[node name="doc_panel_button" type="Button" parent="doc_sprite/alien_doc_panel"]
layout_mode = 0
offset_left = 246.0
offset_top = -405.0
offset_right = 287.0
offset_bottom = -364.0

[connection signal="pressed" from="doc_sprite/sprite_button" to="." method="_on_sprite_button_pressed"]
[connection signal="gui_input" from="doc_sprite/alien_doc_panel" to="." method="_on_alien_doc_panel_gui_input"]
[connection signal="pressed" from="doc_sprite/alien_doc_panel/doc_panel_button" to="." method="_on_doc_panel_button_pressed"]
